--- a/src/app/view/character-search/character-search.component.html
+++ b/src/app/view/character-search/character-search.component.html
@@ -1,3 +1,7 @@
-<p>
-  character-search works!
-</p>
+<div class="row">
+<div class="input-group ui-toolbar">
+<span class="glyphicon glyphicon-chevron-left ui-toolbar-btn"></span>
+<input type="text" pattern="^[0-9A-Za-z]+$" class="form-control ui-textbox" placeholder="character name">
+<span class="glyphicon glyphicon-search ui-toolbar-btn"></span>
+</div>
+</div>
