--- a/src/app/view/character-search/character-search.component.html
+++ b/src/app/view/character-search/character-search.component.html
@@ -1,7 +1,11 @@
 <div class="row">
 <div class="input-group ui-toolbar">
 <span class="glyphicon glyphicon-chevron-left ui-toolbar-btn"></span>
-<input type="text" pattern="^[0-9A-Za-z]+$" class="form-control ui-textbox" placeholder="character name">
+<input #characterName type="text" pattern="^[0-9A-Za-z]+$" class="form-control ui-textbox" placeholder="character name" (keyup)="search(characterName.value)">
 <span class="glyphicon glyphicon-search ui-toolbar-btn"></span>
 </div>
+</div>
+<div>
+<ul>
+</ul>
 </div>
