表示機能追加

--- a/src/app/view/character-search/character-search.component.html
+++ b/src/app/view/character-search/character-search.component.html
@@ -5,4 +5,8 @@
 <span class="glyphicon glyphicon-search ui-toolbar-btn"></span>
 </div>
 </div>
-
+<div>
+<ul>
+<li *ngFor="let candidate of candidates">{{ candidate.name.first }}</li>
+</ul>
+</div>
