デプロイテストOK

--- a/src/app/view/character-search/character-search.component.html
+++ b/src/app/view/character-search/character-search.component.html
@@ -6,7 +6,7 @@
 </div>
 </div>
 <div>
-<ul>
-<li *ngFor="let candidate of candidates">{{ candidate.name.first }}</li>
+<ul class="list-group">
+<li *ngFor="let candidate of candidates" class="list-group-item">{{ candidate.name.first }}</li>
 </ul>
 </div>
