--- a/src/app/view/character-search/character-search.component.scss
+++ b/src/app/view/character-search/character-search.component.scss
@@ -1,1 +1,7 @@
 @import '../view.common.scss';
+
+.ui-toolbar-list > .list-group-item:first-child {
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  border-top: none;
+}
