一応選択機能付いた

--- a/src/app/view/character-search/character-search.component.scss
+++ b/src/app/view/character-search/character-search.component.scss
@@ -5,3 +5,9 @@
   border-top-right-radius: 0px;
   border-top: none;
 }
+
+.ui-charactername {
+  width: 1px;
+  line-height: 100%;
+  background-color: #FF00FF;
+}
