--- a/src/app/view/view.common.scss
+++ b/src/app/view/view.common.scss
@@ -56,3 +56,20 @@ $icon_color_active: lighten( $icon_color, 30% );
 .ui-toolbar-btn:active {
   color: $icon_color_active;
 }
+
+.ui-toolbar-list > .list-group-item:first-child {
+  border-top-left-radius: 0px;
+  border-top-right-radius: 0px;
+  border-top: none;
+}
+
+.ui-toolbar-title {
+  display: table-cell;;
+  width: 1%;
+  white-space: nowrap;
+  line-height: 1;
+  margin: 0; 
+  padding: 6px 12px;
+  vertical-align: middle;
+}
+
