プロファイル取得テスト

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,2 @@
 <character-search (onCharacterSelected)="characterSelected($event)"></character-search>
+<character-profile [selectedCharacterId]="selectedId"></character-profile>  
