キャラクタ情報表示画面追加

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<character-search (onCharacterSelected)="characterSelected($event)"></character-search>
-<character-profile [selectedCharacterId]="selectedId"></character-profile>  
+<!-- <character-search (onCharacterSelected)="characterSelected($event)"></character-search> -->
+<!-- <character-profile [selectedCharacterId]="selectedId"></character-profile>   -->
+
+<router-outlet></router-outlet>
