--- a/src/app/view/character-search/character-search.component.html
+++ b/src/app/view/character-search/character-search.component.html
@@ -5,13 +5,16 @@
 		<span class="glyphicon glyphicon-remove ui-toolbar-btn" (click)="clear()"></span>
 	</div>
 </div>
-<ul class="list-group ui-toolbar-list">
+<div class="list-group ui-toolbar-list">
   <a *ngFor="let candidate of candidates"
       class="list-group-item"
       [ngClass]="( selectedCharacter?.character_id === candidate?.character_id ) ? 'active' : ''"
-		  (click)="selectCharacter(candidate)">{{ candidate.name.first }} 
-		<span *ngIf="selectedCharacter?.character_id === candidate?.character_id" class="badge" (click)="characterFixed(candidate.character_id)">
+		  (click)="selectCharacter(candidate)">{{ candidate.name.first }}
+		<!-- link to character profile -->
+		<a *ngIf="selectedCharacter?.character_id === candidate?.character_id"
+		    class="badge"
+		    [routerLink]="['/character/show/', candidate.character_id]">
 			<span class="glyphicon glyphicon-triangle-right"></span>
-    </span>
+    </a>
   </a>
-</ul>
+</div>
