--- a/src/app/view/view.common.scss
+++ b/src/app/view/view.common.scss
@@ -56,3 +56,12 @@ $icon_color_active: lighten( $icon_color, 30% );
 .ui-toolbar-btn:active {
   color: $icon_color_active;
 }
+
+.ui-toolbar-title {
+  white-space: nowrap;
+  width: 1%;
+  line-height: 1;
+  margin: 0; 
+  padding: 6px 6px;
+  vertical-align: middle;
+}
