--- a/src/app/view/view.common.scss
+++ b/src/app/view/view.common.scss
@@ -65,3 +65,7 @@ $icon_color_active: lighten( $icon_color, 30% );
   padding: 6px 6px;
   vertical-align: middle;
 }
+
+.ui-info-box {
+  margin: 6px;
+}
