--- a/src/app/view/character-profile/character-profile.component.html
+++ b/src/app/view/character-profile/character-profile.component.html
@@ -1,7 +1,7 @@
 <div class="row">
-	<div class="input-group ui-toolbar">
+  <div class="input-group ui-toolbar">
     <span class="glyphicon glyphicon-chevron-left ui-toolbar-btn" (click)="goBack()"></span>
-    <span class="ui-toolbar-title">Confirmation</span>
+    <span>Confirmation</span>
 	</div>
 </div>
 <div class="row">
