Squashed commit of the following:
commit 306a13548e39c4f829e4ff0ed34c27186dd4ac5e
Author: WeakenedPlayer <weakenedplayer@gmail.com>
Date:   Sun Feb 5 23:54:29 2017 +0900

    プロファイルを複数取得可能に変更

commit 4f09688a5ebfaa7009e35e987a21ff48ca4efd12
Author: WeakenedPlayer <weakenedplayer@gmail.com>
Date:   Sun Feb 5 23:45:11 2017 +0900

    Not foundとランディングページを準備

commit bc36e7f049ac0ba7d76d4654b7bcef58757b3bf2
Author: WeakenedPlayer <weakenedplayer@gmail.com>
Date:   Sun Feb 5 23:14:02 2017 +0900

    404エラー対策

commit 1fd33026439973b2c7f5282dd81752962645d6eb
Author: WeakenedPlayer <weakenedplayer@gmail.com>
Date:   Sun Feb 5 21:37:45 2017 +0900

    CSS調整

commit a5d226bbfd719798d6db323a6bd7d3533d3507af
Author: WeakenedPlayer <weakenedplayer@gmail.com>
Date:   Sun Feb 5 21:05:57 2017 +0900

    検索機能と表示機能をリンク

commit f2f552794931e6e107fc42a74898bc38a7f67fa4
Author: WeakenedPlayer <weakenedplayer@gmail.com>
Date:   Sun Feb 5 19:34:45 2017 +0900

    途中保存

commit 93c667f5193c129c6aa7b2f42af1d79a143d2df5
Author: WeakenedPlayer <weakenedplayer@gmail.com>
Date:   Sun Feb 5 19:15:14 2017 +0900

    キャラクタ情報表示画面追加

--- a/src/app/view/character-search/character-search.component.html
+++ b/src/app/view/character-search/character-search.component.html
@@ -1,17 +1,20 @@
 <div class="row">
 	<div class="input-group ui-toolbar">
-    <span class="glyphicon glyphicon-chevron-left ui-toolbar-btn"></span>
+    <span class="glyphicon glyphicon-chevron-left ui-toolbar-btn" (click)="goBack()"></span>
     <input type="text" class="form-control" [formControl]="partialNameInput" placeholder="Your character name">
 		<span class="glyphicon glyphicon-remove ui-toolbar-btn" (click)="clear()"></span>
 	</div>
 </div>
-<ul class="list-group ui-toolbar-list">
+<div class="list-group ui-toolbar-list">
   <a *ngFor="let candidate of candidates"
       class="list-group-item"
       [ngClass]="( selectedCharacter?.character_id === candidate?.character_id ) ? 'active' : ''"
-		  (click)="selectCharacter(candidate)">{{ candidate.name.first }} 
-		<span *ngIf="selectedCharacter?.character_id === candidate?.character_id" class="badge" (click)="characterFixed(candidate.character_id)">
+		  (click)="selectCharacter(candidate)">{{ candidate.name.first }}
+		<!-- link to character profile -->
+		<a *ngIf="selectedCharacter?.character_id === candidate?.character_id"
+		    class="badge"
+		    [routerLink]="['/character/show/', candidate.character_id]">
 			<span class="glyphicon glyphicon-triangle-right"></span>
-    </span>
+    </a>
   </a>
-</ul>
+</div>
