ログイン機能を確認

--- a/src/app/view/landing/landing.component.html
+++ b/src/app/view/landing/landing.component.html
@@ -2,3 +2,14 @@
 <li><a routerLink="/character/search">検索画面</a></li>
 <li><a routerLink="/character/show/5428123302633481745">キャラクター表示画面(遷移例)</a></li>
 </ul>
+
+<div class="row">
+  <div class="col-md-12">
+    <div class="btn-group btn-group-justified" role="group">
+      <div class="btn-group" role="group">
+        <button type="button" class="btn btn-default" (click)="login()">Login google</button>
+        <button type="button" class="btn btn-default" (click)="logout()">Logout google</button>
+      </div>
+    </div>
+  </div>
+</div>
