色々追加…詳細忘れ

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
 <router-outlet></router-outlet>
-<alert type="success">hello</alert>
+<alert type="success" (click)="test()">{{selectedId}}</alert>
+<alert type="success" (click)="test2()">{{selectedId}}</alert>
+<alert type="success" (click)="test3()">{{selectedId}}</alert>
