--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,9 @@
 <router-outlet></router-outlet>
+<alert type="success" (click)="test()">{{selectedId}}</alert>
+<alert type="success" (click)="test2()">{{selectedId}}</alert>
+<alert type="success" (click)="test3()">{{selectedId}}</alert>
+<ul>
+<li *ngFor="let item of mapperTest.createdChildren; let i = index;">
+{{item}}
+</li>
+</ul>
