--- a/src/app/view/landing/landing.component.html
+++ b/src/app/view/landing/landing.component.html
@@ -2,3 +2,21 @@
 <li><a routerLink="/character/search">検索画面</a></li>
 <li><a routerLink="/character/show/5428123302633481745">キャラクター表示画面(遷移例)</a></li>
 </ul>
+<div class="panel panel-default">
+    <div class="panel-heading">Login status</div>
+  <div class="panel-body">
+  <p>{{msg}}</p>
+  </div>
+</div>
+<div class="row">
+  <div class="col-md-12">
+    <div class="btn-group btn-group-justified" role="group">
+      <div class="btn-group" role="group">
+        <button type="button" class="btn btn-default" (click)="login()">Login</button>
+      </div>
+      <div class="btn-group" role="group">
+        <button type="button" class="btn btn-default" (click)="logout()">Logout</button> 
+      </div>
+    </div>
+  </div>
+</div>
