本人確認画面の外観改善

--- a/src/app/view/character-profile/character-profile.component.html
+++ b/src/app/view/character-profile/character-profile.component.html
@@ -1,12 +1,12 @@
 <div class="row">
   <div class="input-group ui-toolbar">
     <span class="glyphicon glyphicon-chevron-left ui-toolbar-btn" (click)="goBack()"></span>
-    <span>Confirmation</span>
+    <span class="ui-toolbar-title">Identification Request</span>
 	</div>
 </div>
 <div class="row">
 	<div class="panel panel-default ui-info-box">
-	  <div class="panel-heading">Character Information</div>
+	  <div class="panel-heading">Character Profile</div>
 	  <table class="table table-nonfluid" *ngIf="profile"> 
 	    <tbody>
 	      <tr>
@@ -58,7 +58,7 @@
   <div class="col-md-12">
     <div class="btn-group btn-group-justified" role="group">
 		  <div class="btn-group" role="group">
-		    <button type="button" class="btn btn-default">Select this character</button>
+		    <button type="button" class="btn btn-default">Request for character identification</button>
 		  </div>
     </div>
   </div>
