--- a/src/app/view/character-profile/character-profile.component.html
+++ b/src/app/view/character-profile/character-profile.component.html
@@ -54,7 +54,7 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row" *ngIf="isLoggedIn && isUserEnabled">
   <div class="col-md-12">
     <div class="btn-group btn-group-justified" role="group">
 		  <div class="btn-group" role="group">
