--- a/src/app/view/character-profile/character-profile.component.html
+++ b/src/app/view/character-profile/character-profile.component.html
@@ -58,7 +58,7 @@
   <div class="col-md-12">
     <div class="btn-group btn-group-justified" role="group">
 		  <div class="btn-group" role="group">
-		    <button type="button" class="btn btn-default">Request for character identification</button>
+		    <button type="button" class="btn btn-default" (click)="requestForIdentification()">Request for character identification</button>
 		  </div>
     </div>
   </div>
@@ -67,6 +67,6 @@
 
 <div class="row">
   <div class="col-md-12">
-    <input type="text" class="form-control" [formControl]="testInput" placeholder="aaa">
+    <input type="text" class="form-control" [formControl]="testInput" placeholder="5428123302633481745">
   </div>
 </div>
