Squashed commit of the following:
commit 410695074452d54567650673a32cf466ccacde46
Author: WeakenedPlayer <weakenedplayer@gmail.com>
Date:   Sun Mar 19 18:47:22 2017 +0900

    本人確認要求発行OK

commit e44847cb7975e669ff5d27111677f8ae8e5c6ed8
Author: WeakenedPlayer <weakenedplayer@gmail.com>
Date:   Sun Mar 19 15:44:45 2017 +0900

    DB操作の関数名変更

commit c51d832223562d2ea5b8bf16d4a23cc90a8ec2f9
Author: WeakenedPlayer <weakenedplayer@gmail.com>
Date:   Sun Mar 19 14:31:31 2017 +0900

    ログインするたびに更新日を更新する機能追加

commit 16e10b5bd70d4ae467dedad8fb83702801064fb2
Author: WeakenedPlayer <weakenedplayer@gmail.com>
Date:   Sun Mar 19 13:10:00 2017 +0900

    DB変更: 部分更新に対応しやすいよう、インターフェースの公開の仕方を変更。

commit 0458f0f9d186c129b32bbbabed92d8ad932b3a99
Author: WeakenedPlayer <weakenedplayer@gmail.com>
Date:   Sun Mar 19 12:52:15 2017 +0900

    データベースルール追加

commit 4355ba1d3d3a4a8c2ead2a0dc77db6e0df67cf17
Author: WeakenedPlayer <weakenedplayer@gmail.com>
Date:   Sun Mar 19 12:23:03 2017 +0900

    userを変更...登録情報のみ分離(アクセス権の都合)

commit a5f1c4468df4c790c43e6aae023d958f3501381c
Author: WeakenedPlayer <weakenedplayer@gmail.com>
Date:   Sun Mar 19 10:14:55 2017 +0900

    Observable -> connectableに変更

commit 472b0aac0bd40afdd0e8f013234ee8644dca7b10
Author: WeakenedPlayer <weakenedplayer@gmail.com>
Date:   Sun Mar 19 09:54:28 2017 +0900

    ログイン状態をPublishするテスト

commit 4298b96e3c56f757249cb1bdc9979e1a20babc3c
Author: WeakenedPlayer <weakenedplayer@gmail.com>
Date:   Sun Mar 19 09:05:36 2017 +0900

    ObservableをVMに移動

commit e2a1606b23e81b3562b126ca45863a5a901dc2d8
Author: WeakenedPlayer <weakenedplayer@gmail.com>
Date:   Sun Mar 19 02:49:36 2017 +0900

    VMテスト

commit 7373b08c2a9f51cf40af3a9b7ca719ad74354fd8
Author: WeakenedPlayer <weakenedplayer@gmail.com>
Date:   Sun Mar 19 00:19:35 2017 +0900

    本人確認画面の外観改善

commit 8a0ceff15f63d23bd38834139b40d6728e547cef
Author: WeakenedPlayer <weakenedplayer@gmail.com>
Date:   Sat Mar 18 23:51:24 2017 +0900

    キャラクター選択画面: 不正な文字を除外できるよう改良

commit 6b6523e

--- a/src/app/view/character-profile/character-profile.component.html
+++ b/src/app/view/character-profile/character-profile.component.html
@@ -1,12 +1,12 @@
 <div class="row">
   <div class="input-group ui-toolbar">
     <span class="glyphicon glyphicon-chevron-left ui-toolbar-btn" (click)="goBack()"></span>
-    <span>Confirmation</span>
+    <span class="ui-toolbar-title">Identification Request</span>
 	</div>
 </div>
 <div class="row">
 	<div class="panel panel-default ui-info-box">
-	  <div class="panel-heading">Character Information</div>
+	  <div class="panel-heading">Character Profile</div>
 	  <table class="table table-nonfluid" *ngIf="profile"> 
 	    <tbody>
 	      <tr>
@@ -54,12 +54,19 @@
   </div>
 </div>
 
-<div class="row">
+<div class="row" *ngIf="isLoggedIn">
   <div class="col-md-12">
     <div class="btn-group btn-group-justified" role="group">
 		  <div class="btn-group" role="group">
-		    <button type="button" class="btn btn-default">Select this character</button>
+		    <button type="button" class="btn btn-default" (click)="requestForIdentification()">Request for character identification</button>
 		  </div>
     </div>
+  </div>
+</div>
+
+
+<div class="row">
+  <div class="col-md-12">
+    <input type="text" class="form-control" [formControl]="testInput" placeholder="5428123302633481745">
   </div>
 </div>
