--- a/src/app/view/landing/landing.component.html
+++ b/src/app/view/landing/landing.component.html
@@ -1,5 +1,6 @@
 <ul>
 <li><a routerLink="/character/search">検索画面</a></li>
+<li><a routerLink="/request/list/0">list</a></li>
 <li><a routerLink="/character/show/5428123302633481745">キャラクター表示画面(遷移例)</a></li>
 </ul>
 <div class="panel panel-default">
